fix: saco white-space nowrap para mobile

--- a/aquala-react/src/App.css
+++ b/aquala-react/src/App.css
@@ -130,7 +130,6 @@ nav ul a:hover {
   margin-bottom: 1rem;
   letter-spacing: -2px;
   color: var(--color-texto);
-  white-space: nowrap;
 }
 
 .hero-texto p {
